--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,16 +1,23 @@
-<% if flash[:alert] %>
-<p id="alert">
-	<%= flash[:alert] %>
+<% if flash[:notice] %>
+<p id="notice">
+	<%= flash[:notice] %>
 </p>
 <% end %>
-
+<% if @book.errors.any? %>
+<h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+<ul>
+	<% @book.errors.full_messages.each do |message| %>
+	<li><%= message %></li>
+	<% end %>
+</ul>
+<% end %>
 <div class="body">
 	<div class="container">
 		<p id="notice"></p>
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "attachment user profile_image fallback", fallback: "no_image.jpg"%>
+				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "attachment user profile_image fallback", fallback: "no_image.jpg", size:'60x60'%>
 				<table class="table">
 					<tbody>
 						<tr></tr>
@@ -58,7 +65,7 @@
 					<tbody>
 						<tr>
 							<th>
-								<%= link_to attachment_image_tag(book.user, :profile_image, :fill, 60,60),user_path(book.user_id) %>
+								<%= link_to attachment_image_tag(book.user, :profile_image, :fill, 60,60, class: "attachment user profile_image fallback", fallback: "no_image.jpg", size:'60x60'),user_path(book.user_id) %>
 							</th>
 							<th><%= link_to book.title, book_path(book) %></th>
 							<th><%= book.body %></th>
