--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,13 +3,21 @@
 	<%= flash[:notice] %>
 </p>
 <% end %>
+<% if @book.errors.any? %>
+<h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3>
+<ul>
+	<% @book.errors.full_messages.each do |message| %>
+	<li><%= message %></li>
+	<% end %>
+</ul>
+<% end %>
 <div class="body">
 	<div class="container">
 		<p id="notice"></p>
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "attachment user profile_image fallback", fallback: "no_image.jpg"%>
+				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "attachment user profile_image fallback", fallback: "no_image.jpg", size:'60x60'%>
 				<table class="table">
 					<tbody>
 						<tr></tr>
@@ -45,22 +53,20 @@
 			<div class="col-xs-9">
 				<h2>Book detail</h2>
 				<table class="table">
-					<% @books.each do |book| %>
 					<tbody>
 						<tr>
 							<th>
-								<%= link_to attachment_image_tag(book.user, :profile_image, :fill, 60,60),user_path(book.user_id) %><br>
-								<%= link_to book.user.name,user_path(book.user_id) %>
+								<%= link_to attachment_image_tag(@book_data.user, :profile_image, :fill, 60,60, class: "attachment user profile_image fallback", fallback: "no_image.jpg", size:'60x60'),user_path(@book_data.user_id) %><br>
+								<%= link_to @book_data.user.name,user_path(@book_data.user_id) %>
 							</th>
-							<td><%= book.title %></td>
-							<td><%= book.body %></td>
-							<% if book.user_id == current_user.id %>
-							<td><%= link_to "Edit", edit_book_path(book),class:"btn-sm btn-success edit_book_19082" %></td>
-							<td><%= link_to "Destroy", book_path(book),method: :delete,class:"btn-sm btn-danger destroy_book_19082", "data-confirm" => "本当に削除しますか？"%></td>
+							<td><%= @book_data.title %></td>
+							<td><%= @book_data.body %></td>
+							<% if @book_data.user_id == current_user.id %>
+							<td><%= link_to "Edit", edit_book_path(@book_data),class:"btn-sm btn-success edit_book_19082" %></td>
+							<td><%= link_to "Destroy", book_path(@book_data),method: :delete,class:"btn-sm btn-danger destroy_book_19082", "data-confirm" => "本当に削除しますか？"%></td>
 							<% end %>
 						</tr>
 					</tbody>
-					<% end %>
 				</table>
 			</div>
 		</div>
