--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,5 @@
-<h1>welcome to
-	<span class="glyphicon glyphicon-book"><strong>Bookers</strong>  !!</span>
-</h1>
+<div class="container">
+	<h1>welcome to
+		<span class="glyphicon glyphicon-book"><strong>Bookers</strong>!</span>
+	</h1>
+</div>
