--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -51,6 +51,11 @@
 				<%= f.submit 'Create Book' %>
 
 				<% end %>
+				<div class="a">
+    				<div class="b">1</div>
+    				<div class="b">2</div>
+    				<div class="b">3</div>
+				</div>
 			</div>
 			<div class="col-xs-9">
 				<h2>Books</h2>
